third_party/move/move-compiler-v2/tests/more-v1/parser/native_main.exp

Diagnostics:
error: invalid 'script' declaration
  ┌─ tests/more-v1/parser/native_main.move:2:1
  │
2 │ native fun main();
  │ ^^^^^^ Invalid 'native' function. 'script' functions must have a defined body
